# amongus-server

./: .gitignore  Cargo.toml  deploy.sh
.github/workflows/: rust.yml
backend/: Cargo.toml  Dockerfile  docker-compose.yml  pushToEcr.sh
backend/src/: confidential_data.rs  game.rs  incoming_websocket_messages.rs  internal_messages.rs  lib.rs  main.rs  outgoing_websocket_messages.rs  player.rs  routes.rs
backend/tests/: integration_tests.rs  unit_tests.rs
deploy/: run-backend.sh  run-frontend.sh
frontend/: .env.development  .env.production  1  index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: App.tsx  ErrorMessage.tsx  index.css  playersSlice.ts  store.ts  websocket.ts
frontend/src/Admin/: Admin.tsx
frontend/src/Dashboard/: Dashboard.tsx
frontend/src/InGame/: Crewmate.tsx  CrewmateVictory.tsx  Dashboard.tsx  EmergencyButton.tsx  GameBegin.tsx  ImposterAbilities.tsx  ImposterVictory.tsx  Meeting.tsx  PlayerTile.tsx  PlayerTileArray.tsx  RoleAssignment.tsx  StatusOverview.tsx
frontend/src/JoinGame/: Home.tsx  Lobby.tsx  PlayerTile.tsx  StatusOverview.tsx  colorSlice.ts  userSlice.ts
frontend/src/Messages/: fromServer.ts  toServer.ts
frontend/src/state/: errorsSlice.ts  (+4 more)
frontend_old/: package-lock.json  package.json
frontend_old/src/: index.tsx
src/: game.rs  game_messages.rs  incoming_websocket_messages.rs  internal_messages.rs  main.rs  outgoing_websocket_messages.rs  player.rs  player_messages.rs  player_websocket.rs  player_websocket_messages.rs  routes.rs  websocket_messages.rs
tests/: integration_tests.rs
(+3 files in other folders)
