[package]
name = "among-us-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4" 
actix-web-actors="4"
actix = "0.13.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rand = "0.8.5"
futures = "0.3.25"
actix-http = "3.3.0"
awc = "3.1.0"
futures-util = "0.3.25"
actix-test = "0.1.0"
rand_pcg = "0.3.1"
actix-codec = "0.5.0"
